--- a/index.html
+++ b/index.html
@@ -1,9 +1,36 @@
 <!DOCTYPE html>
-
-<html lang="en">
+<html lang="en-US">
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Product Preview Card Component</title>
+    <link rel="stylesheet" href="styles.css" />
+
+    <meta name="author" content="Darkstar" />
+    <meta
+      name="description"
+      content="Check out Darkstar's solution for the Product Preview Card Component challenge on Frontend Mentor"
+    />
+    <meta
+      property="og:description"
+      content="Check out Darkstar's solution for the Product Preview Card Component challenge on Frontend Mentor"
+    />
+    <meta
+      property="og:url"
+      content="https://product-preview-card-component-darkstarxdd.vercel.app/"
+    />
+    <meta
+      property="og:image"
+      content="https://product-preview-card-component-darkstarxdd.vercel.app/og-img.jpeg"
+    />
+    <meta property="og:type" content="website" />
+    <meta
+      property="og:title"
+      content="Product Preview Card Component - Frontend Mentor"
+    />
+    <meta property="og:image:type" content="image/jpeg" />
+    <meta property="og:image:width" content="1440" />
+    <meta property="og:image:height" content="756" />
 
     <link
       rel="icon"
@@ -18,16 +45,12 @@
       href="https://fonts.googleapis.com/css2?family=Fraunces:opsz,wght@9..144,700&family=Montserrat:wght@500;700&display=swap"
       rel="stylesheet"
     />
-
-    <link rel="stylesheet" href="styles.css" />
-
-    <title>Product Preview Card Component</title>
   </head>
 
   <body>
     <main>
       <div class="card">
-        <div class="card__img">
+        <div>
           <picture>
             <source
               media="(min-width: 700px)"
@@ -50,10 +73,10 @@
             <p class="card__price-old">$169.99</p>
           </div>
 
-          <a class="card__btn" href="#">
+          <button class="card__btn">
             <img src="./images/icon-cart.svg" alt="" />
             <p class="card__btn-text">Add to Cart</p>
-          </a>
+          </button>
         </div>
       </div>
     </main>
