--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
     />
     <meta
       property="og:image"
-      content="https://product-preview-card-component-darkstarxdd.vercel.app/og-img.jpeg"
+      content="https://product-preview-card-component-darkstarxdd.vercel.app/public/og-img.jpeg"
     />
     <meta property="og:type" content="website" />
     <meta
@@ -29,36 +29,31 @@
       content="Product Preview Card Component - Frontend Mentor"
     />
     <meta property="og:image:type" content="image/jpeg" />
-    <meta property="og:image:width" content="1440" />
-    <meta property="og:image:height" content="756" />
+    <meta property="og:image:width" content="1200" />
+    <meta property="og:image:height" content="630" />
 
     <link
       rel="icon"
       type="image/png"
       sizes="32x32"
-      href="./images/favicon-32x32.png"
-    />
-
-    <link rel="preconnect" href="https://fonts.googleapis.com" />
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
-    <link
-      href="https://fonts.googleapis.com/css2?family=Fraunces:opsz,wght@9..144,700&family=Montserrat:wght@500;700&display=swap"
-      rel="stylesheet"
+      href="assets/images/favicon-32x32.png"
     />
   </head>
 
   <body>
     <main>
       <div class="card">
-        <div>
-          <picture>
-            <source
-              media="(min-width: 700px)"
-              srcset="./images/image-product-desktop.jpg"
-            />
-            <img src="./images/image-product-mobile.jpg" alt="perfume-bottle" />
-          </picture>
-        </div>
+        <picture>
+          <source
+            media="(min-width: 48rem)"
+            srcset="assets/images/image-product-desktop.jpg"
+          />
+          <img
+            src="assets/images/image-product-mobile.jpg"
+            alt="A perfume bottle placed among leaves in a product marketing shot."
+            class="card__img"
+          />
+        </picture>
 
         <div class="card__content">
           <p class="card__tag">Perfume</p>
@@ -74,8 +69,19 @@
           </div>
 
           <button class="card__btn">
-            <img src="./images/icon-cart.svg" alt="" />
-            <p class="card__btn-text">Add to Cart</p>
+            <svg
+              width="15"
+              height="16"
+              xmlns="http://www.w3.org/2000/svg"
+              aria-hidden="true"
+              class="cart-icon"
+            >
+              <path
+                d="M14.383 10.388a2.397 2.397 0 0 0-1.518-2.222l1.494-5.593a.8.8 0 0 0-.144-.695.8.8 0 0 0-.631-.28H2.637L2.373.591A.8.8 0 0 0 1.598 0H0v1.598h.983l1.982 7.4a.8.8 0 0 0 .799.59h8.222a.8.8 0 0 1 0 1.599H1.598a.8.8 0 1 0 0 1.598h.943a2.397 2.397 0 1 0 4.507 0h1.885a2.397 2.397 0 1 0 4.331-.376 2.397 2.397 0 0 0 1.12-2.021ZM11.26 7.99H4.395L3.068 3.196h9.477L11.26 7.991Zm-6.465 6.392a.8.8 0 1 1 0-1.598.8.8 0 0 1 0 1.598Zm6.393 0a.8.8 0 1 1 0-1.598.8.8 0 0 1 0 1.598Z"
+                fill="#FFF"
+              />
+            </svg>
+            <p>Add to Cart</p>
           </button>
         </div>
       </div>
