refactor: move og img to root

--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
     />
     <meta
       property="og:image"
-      content="https://product-preview-card-component-darkstarxdd.vercel.app/public/og-img.jpeg"
+      content="https://product-preview-card-component-darkstarxdd.vercel.app/og-img.jpeg"
     />
     <meta property="og:type" content="website" />
     <meta
