--- a/index.html
+++ b/index.html
@@ -81,7 +81,7 @@
                 fill="#FFF"
               />
             </svg>
-            <p>Add to Cart</p>
+            <span>Add to Cart</span>
           </button>
         </div>
       </div>
